# -Qwen-VL-LoRA-QLoRA

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-vllm.txt  requirements.txt
configs/: local_8gb.yaml  remote_a10g.yaml  service.yaml
data/: sample_sft.jsonl
docs/: remote_gpu_ssh.md
scripts/: quantize_awq.py  serve_vllm.sh  start_api.ps1  train_qlora_sft.py
src/edge_qwen/: __init__.py  api.py  config.py  schemas.py
src/edge_qwen/engines/: __init__.py  base.py  openai_vllm.py  transformers_vl.py
tutorials/: 01_environment.md  02_local_inference.md  03_qlora_finetune.md  04_awq_quantization.md  05_vllm_fastapi_deploy.md  06_remote_gpu_ssh.md  07_report_and_resume.md  README.md
